Changes for 3.2.0rc2

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.2.0rc1

New features:
...G...... [ZBXNEXT-3206] added support of flexible item key parameters for aliases (Sasha)
..F....... [ZBXNEXT-3405] implemented timeline in Monitoring->Problems view (Pavel, Sasha)
...G...PS. [ZBXNEXT-3353] implemented interface for history export through loadable modules and changed module loading to require only zbx_module_api_version() function (gleb, Sandis)
..F....... [ZBXNEXT-3423] removed ability to acknowledge OK events (Ivo)
..F....... [ZBXNEXT-3416] implemented event hidden tag display with hint box when there are more than 3 tags and better display of long tags and added event tag display in event details widget (Ivo)
..F....... [ZBXNEXT-3412] implemented mass update for trigger and trigger prototype tags and manual close (Ivo)

Bug fixes:
..F....... [ZBXNEXT-3101] fixed displaying fields of "Operations" tab in action edit form when adding new operation in IE (Cemeris)
....I..... [ZBX-11171] updated database versioning for v3.2 release (Sasha)
....I..... [ZBXNEXT-3101] fixed sql errors while upgrade IBM DB2 database (Sasha)
A......... [ZBX-11143] added missing space in CTrigger.php SQL query (Cemeris)
..F....... [ZBX-6083] strings that are related to status of item, trigger and host prototypes was renamed "Enable" and "Status" => "Create enabled", "Disable" => "Create disabled", "Enabled" => "Yes", "Disabled" => "No" (Cemeris)
..F....... [ZBXNEXT-3201] fixed displaying of "Actions" hintbox (Pavel, Sasha)
..F....... [ZBXNEXT-3201] fixed "Actions" column in exported csv file from Monitoring->Problem page (Ivo)
.......PS. [ZBX-11119] fixed use of uninitialized variable (Vladislavs)
..F....... [ZBX-11040] added "page navigation" context to translation strings "First" and "Last"; replicated translations for "First" and "Last" in "page navigation" context from 2.2 brancha (Cemeris)