@@ -88,7 +88,7 @@ const char	*zbx_alias_get(const char *orig)
 	size_t				buffer_offset = 0;
 	const char			*p = orig;
 
-	if (SUCCEED != parse_key((char **)&p) || *p != '\0')
+	if (SUCCEED != parse_key((char **)&p) || '\0' != *p)
 		return orig;
 
 	for (alias = aliasList; NULL != alias; alias = alias->next)
